updated routes, dashboard loading

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
           Browse
         </a>
 
-        <a class="navbar-item has-text-white" href="/api/users/my_profile">
+        <a class="navbar-item has-text-white" href="/mylab">
           Dashboard
         </a>
 
