--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -15,7 +15,7 @@
             <div class="field">
               <label class="label">Project Title</label>
               <div class="control">
-                <input class="input project-title" type="text" placeholder="Enter a title for your project">
+                <input class="input project-title" id="postTitleInput" type="text" placeholder="Enter a title for your project">
               </div>
             </div>
             
@@ -23,7 +23,7 @@
             <div class="field">
               <label class="label">Description</label>
               <div class="control">
-                <textarea class="textarea project-description" placeholder="Describe your project"></textarea>
+                <textarea class="textarea project-description" id="postBodyInput" placeholder="Describe your project"></textarea>
               </div>
             </div>
 
@@ -44,7 +44,7 @@
             {{!-- SUBMIT BUTTON --}}
             <div class="field">
               <div class="control">
-                <button class="button is-link" type="submit">Post Project</button>
+                <button class="button is-link" id="postButton" type="submit">Post Project</button>
               </div>
             </div>
           </div>
