--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,7 +7,9 @@
       <img  class="mb-5" src="/images/createLab-logo-full-b-alt.svg" alt="CreateLab Main Logo" width="600px">
       
       {{!-- SIGN UP FORM --}}
-      <form class="form signup-form">
+      <form class="form signup-form" action="/profile" method="post" enctype="multipart/form-data">
+  <input type="file" name="avatar" />
+</form>>
         <div class="card">
           <div class="card-content">
 
