--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,9 @@
           Home
         </a>
 
-        <a class="navbar-item has-text-white" href="/categories">
+        {{!-- <a class="navbar-item has-text-white" href="/categories">
           Browse
-        </a>
+        </a> --}}
 
         <a class="navbar-item has-text-white" href="/mylab">
           Dashboard
@@ -78,8 +78,6 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
-
-
 </body>
 
 </html>
