--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,4 +1,4 @@
-<div class="container p-4">
+<div class="container p-4 is-fullheight">
 
     {{!-- POST CARD EXAMPLE --}}
     <div class="card post m-4">
@@ -13,12 +13,12 @@
                 </div>
                 {{!-- POST TITLE/USERNAME --}}
                 <div class="media-content">
-                <p class="title is-4">Why Test Posts Are Very Important</p>
-                <p class="subtitle bold is-6">@username25 // <time datetime="2016-1-1">11:09 PM - 14 Dec 2023</time></p>
+                <p class="title is-4">{{title}}</p>
+                <p class="subtitle bold is-6">{{user.name}} // <time datetime="2016-1-1">11:09 PM - 14 Dec 2023</time></p>
                 </div>
             </div>
             <hr>
-            <div class="content has-text-black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+            <div class="content has-text-black"> {{body}}
                 <br><br>
                 <a>Download File here or whatever</a>
                 <br><br>
@@ -30,8 +30,8 @@
                 <a href="#" class="card-footer-item">Like 👍</a>
             </footer>
     </div>
-    
-    {{!-- POSTED COMMENT CARD EXAMPLE --}}
+
+    {{#each comments as |comment|}}
     <div class="card comment m-4">
         <div class="card-content">
             {{!-- HEADER --}}
@@ -44,19 +44,23 @@
                 </div>
                 {{!-- USERNAME/TIMESTAMP --}}
                 <div class="media-content">
-                <p class="title is-6 has-text-darkrose">@username42</p>
+                <p class="title is-6 has-text-darkrose">{{this.user.name}}</p>
                 <p class="subtitle is-6 has-text-black">11:24 PM - 14 Dec 2023</p>
                 </div>
             </div>
             <hr>
             {{!-- COMMENT BODY --}}
-            <div class="content has-text-black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem ipsum? I hardly know er'! *slaps knee* 😂😂😂
+            <div class="content has-text-black"> {{this.comment_text}}
                 <br><br>
                 {{!-- DOWNLOAD LINK (IF FILE ATTACHED) --}}
                 <a>Download File here or whatever</a>
             </div>
         </div>
     </div>
+    {{/each}}
+    
+    {{!-- POSTED COMMENT CARD EXAMPLE --}}
+
 
     {{!-- NEW COMMENT FORM --}}
     <div class="card m-4">
@@ -100,3 +104,4 @@
         </div>
     </div>
 </div>
+
