--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,7 @@
       
       {{!-- SIGN UP FORM --}}
   <form class="form signup-form" action="/profile" method="post" enctype="multipart/form-data">
-    <input type="file" name="avatar" />
+    <input type="file" name="file" />
 
           <div class="card">
             <div class="card-content">
