--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -12,6 +12,7 @@
                 </figure>
                 </div>
                 {{!-- POST TITLE/USERNAME --}}
+                <div id="projectID" data-postID="{{id}}"></div>
                 <div class="media-content">
                 <p class="title is-4">{{title}}</p>
                 <p class="subtitle bold is-6">{{user.name}} // <time datetime="2016-1-1">11:09 PM - 14 Dec 2023</time></p>
@@ -26,11 +27,56 @@
         </div>
         {{!-- CARD BUTTONS --}}
             <footer class="card-footer">
-                <a href="#" class="card-footer-item">Reply</a>
-                <a href="#" class="card-footer-item">Like 👍</a>
+                <a class="card-footer-item" id="replyBtn">Reply</a>
+                <a class="card-footer-item" id="likeBtn">Like 👍</a>
             </footer>
     </div>
 
+    {{!-- NEW COMMENT FORM --}}
+    <form class="newCommentForm">
+        <div class="card m-4">
+            <div class="card-content">
+
+                    {{!-- TEXT AREA INPUT --}}
+                    <div class="field">
+                        <label class="label has-text-blue bold">New Reply</label>
+                        <div class="control">
+                        <textarea class="textarea" placeholder="Write your comment here!" id="commentBody"></textarea>
+                        </div>
+                    </div>
+
+                    {{!-- FILE UPLOAD --}}
+                    <div class="field">
+                        <div class="file has-name">
+                            <label class="file-label">
+                                <input class="file-input" type="file" name="resume">
+                                <span class="file-cta">
+                                    <span class="file-label">📁 Choose a file…</span>
+                                </span>
+                                <span class="file-name">Screen Shot 2017-07-29 at 15.54.25.png</span>
+                            </label>
+                        </div>
+                    </div>
+
+                    {{!-- SUBMIT/CANCEL BUTTONS --}}
+                    <div class="field is-grouped">
+                    <p class="control">
+                        <a class="button is-primary" id="postBtn">
+                        Submit
+                        </a>
+                    </p>
+                    <p class="control">
+                        <a class="button is-light" id="cancelBtn">
+                        Cancel
+                        </a>
+                    </p>
+                    </div>
+
+            </div>
+        </div>
+    </form>
+
+    {{!-- POPULATE COMMENTS --}}
     {{#each comments as |comment|}}
     <div class="card comment m-4">
         <div class="card-content">
@@ -39,7 +85,7 @@
                 {{!-- PROFILE PICTURE --}}
                 <div class="media-left">
                 <figure class="image is-48x48">
-                    <img class="is-rounded" src="https://images2.imgbox.com/90/0c/3L5OF7gf_o.png" alt="Profile image">
+                    <img class="is-rounded" src="https://images2.imgbox.com/90/0c/3L5OF7gf_o.png" alt="Profile image" data-commentID="{{id}}">
                 </figure>
                 </div>
                 {{!-- USERNAME/TIMESTAMP --}}
@@ -58,50 +104,7 @@
         </div>
     </div>
     {{/each}}
-    
-    {{!-- POSTED COMMENT CARD EXAMPLE --}}
-
-
-    {{!-- NEW COMMENT FORM --}}
-    <div class="card m-4">
-        <div class="card-content">
-
-                {{!-- TEXT AREA INPUT --}}
-                <div class="field">
-                    <label class="label has-text-blue bold">New Reply</label>
-                    <div class="control">
-                    <textarea class="textarea" placeholder="Write your comment here!"></textarea>
-                    </div>
-                </div>
-
-                {{!-- FILE UPLOAD --}}
-                <div class="field">
-                    <div class="file has-name">
-                        <label class="file-label">
-                            <input class="file-input" type="file" name="resume">
-                            <span class="file-cta">
-                                <span class="file-label">📁 Choose a file…</span>
-                            </span>
-                            <span class="file-name">Screen Shot 2017-07-29 at 15.54.25.png</span>
-                        </label>
-                    </div>
-                </div>
-
-                {{!-- SUBMIT/CANCEL BUTTONS --}}
-                <div class="field is-grouped">
-                <p class="control">
-                    <a class="button is-primary">
-                    Submit
-                    </a>
-                </p>
-                <p class="control">
-                    <a class="button is-light">
-                    Cancel
-                    </a>
-                </p>
-                </div>
-
-        </div>
-    </div>
 </div>
 
+<script src="/js/comment.js"></script>
+<script src="/js/project.js"></script>
