--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,15 @@
           Home
         </a>
 
-        <a class="navbar-item has-text-white" href="/categories">
-          Browse
-        </a>
+
+
+
+<div class="navbar-item browse-categories">
+  <a class="has-text-white">
+    Browse
+  </a>
+</div>
+
 
         <a class="navbar-item has-text-white" href="/mylab">
           Dashboard
@@ -77,9 +83,11 @@
 
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
+  <script src="/js/browse.js"></script>
   {{/if}}
-
 
 </body>
 
 </html>
+
+
