added a model for Category.js and have it exported. Also added an EventListener for when browse in the navbar is click, it will take the user to the categories web. Lastly, added category.handlebars and set up the ui of categories.

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -3,7 +3,7 @@
   <div class="hero-body">
     <div class="bg-lighten wide">
       
-      <p class="title is-4"> Choose Category of Interest </p>
+      <p class="title is-4"> Choose Category of Interest {{name}}</p>
 
         <div class="card">
           <div class="card-content">
