--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -47,13 +47,13 @@
 
                     {{!-- FILE UPLOAD --}}
                     <div class="field">
-                        <div class="file has-name">
+                        <div class="file has-name" id="fileUpload">
                             <label class="file-label">
                                 <input class="file-input" type="file" name="resume">
                                 <span class="file-cta">
-                                    <span class="file-label">📁 Choose a file…</span>
+                                    <span class="file-label">⬆📁</span>
                                 </span>
-                                <span class="file-name">Screen Shot 2017-07-29 at 15.54.25.png</span>
+                                <span class="file-name">Upload a File</span>
                             </label>
                         </div>
                     </div>
