Updating front-end form submissions

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -61,7 +61,7 @@
                     {{!-- SUBMIT/CANCEL BUTTONS --}}
                     <div class="field is-grouped">
                     <p class="control">
-                        <a class="button is-primary" id="postBtn">
+                        <a class="button is-primary" id="postBtn" type="submit">
                         Submit
                         </a>
                     </p>
