--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -5,7 +5,7 @@
         <p class="title is-4" id="contains-id" data-id="{{id}}">Edit project:</p>
         
         {{!-- NEW POST FORM --}}
-        <form class="form edit-post-form">
+        <form class="form update-post-form">
         <div class="card">
             <div class="card-content">
 
