--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -15,13 +15,15 @@
                 <div id="projectID" data-postID="{{id}}"></div>
                 <div class="media-content">
                 <p class="title is-4">{{title}}</p>
-                <p class="subtitle bold is-6">{{user.name}} // <time datetime="2016-1-1">11:09 PM - 14 Dec 2023</time></p>
+                <p class="subtitle bold is-6">{{user.name}}</p>
                 </div>
             </div>
             <hr>
             <div class="content has-text-black"> {{body}}
                 <br><br>
-                <a href="{{filename}}">{{filename}}</a>
+                {{#if filename}}
+                <a href="{{filename}}">Link To File</a>
+                {{/if}}
                 <br><br>
             </div>
         </div>
@@ -91,7 +93,6 @@
                 {{!-- USERNAME/TIMESTAMP --}}
                 <div class="media-content">
                 <p class="title is-6 has-text-darkrose">{{this.user.name}}</p>
-                <p class="subtitle is-6 has-text-black">11:24 PM - 14 Dec 2023</p>
                 </div>
             </div>
             <hr>
@@ -99,7 +100,9 @@
             <div class="content has-text-black"> {{this.comment_text}}
                 <br><br>
                 {{!-- DOWNLOAD LINK (IF FILE ATTACHED) --}}
-                <a>Download File here or whatever</a>
+                {{#if filename}}
+                <a href="{{filename}}">Link To File</a>
+                {{/if}}
             </div>
         </div>
     </div>
