--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
         <div class="card m-4">
             <div class="card-content post-preview" data-id="{{this.id}}">
                 <p class="title is-4" data-id="{{this.id}}">{{this.title}}</p>
-                <p class="subtitle" data-id="{{this.id}}">{{this.user.name}} // <time datetime="2016-1-1" data-id="{{this.id}}">11:09 PM - 14 Dec 2023</time></p>
+                <p class="subtitle" data-id="{{this.id}}">{{this.user.name}}</p>
             </div>
         </div>
         {{/each}}
