--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
         <div class="card m-4">
             <div class="card-content post-preview" data-id="{{this.id}}">
                 <p class="title is-4" data-id="{{this.id}}">{{this.title}}</p>
-                <p class="subtitle" data-id="{{this.id}}">{{../name}} // <time datetime="2016-1-1" data-id="{{this.id}}">11:09 PM - 14 Dec 2023</time></p>
+                <p class="subtitle" data-id="{{this.id}}">{{../name}}</p>
             </div>
             <div class="card-footer">
                 <a class="card-footer-item editBtn" data-id="{{this.id}}">Edit</a>
